--- a/public/index.html
+++ b/public/index.html
@@ -121,9 +121,18 @@
     <fancy-section slot="section" section="heat">
 
         
-        <info-headline slot="headline">
+        <info-headline slot="headline" year="1">
           <h1 slot="text">A Headline</h1>
         </info-headline>
+        <info-headline slot="headline" year="2">
+            <h1 slot="text">A Headline</h1>
+          </info-headline>
+          <info-headline slot="headline" year="3">
+            <h1 slot="text">A Headline</h1>
+          </info-headline>
+          <info-headline slot="headline" year="4">
+            <h1 slot="text">A Headline</h1>
+          </info-headline>
               
         <info-input slot="userinput">
         </info-input>
