--- a/public/ce/sectioncontainer.html
+++ b/public/ce/sectioncontainer.html
@@ -19,7 +19,12 @@
 
 	</style>
 	<div class="info-section">
-		<slot name="section"></slot>
+		<slot name="h1"></slot>
+		<slot name="b1"></slot>
+		<slot name="h2"></slot>
+		<slot name="i1"></slot>
+		<slot name="s1"></slot>
+		<slot name="select1"></slot>
 	</div>
 </template>
 
