--- a/public/ce/infosection.html
+++ b/public/ce/infosection.html
@@ -1,5 +1,7 @@
 <template>
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 	<style>
 		.info-section {
 			display: flex;
@@ -73,7 +75,7 @@
 			}
 
 			connectedCallback() {
-				events.subscribe('updated', this.changeHeadline.bind(this));
+				events.subscribe('newInput', this.changeHeadline.bind(this));
 			}
 
 		}
