--- a/public/ce/infoinput.html
+++ b/public/ce/infoinput.html
@@ -1,5 +1,7 @@
 <template>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 	<style>
 		.info-section {
 			display: flex;
@@ -79,14 +81,14 @@
 
 			switch(name) {
 				case 'value':
-					eventDispatcher(el, 'updated', details);
+					eventDispatcher(el, 'newInput', details);
 			}
 		}
 
 		connectedCallback() {
 			let el = this.shadowRoot.querySelector('input');
 			el.value = this.value;
-			eventPublisher('updated');
+			eventPublisher('newInput');
 		}
 	}
 
