--- a/public/ce/infoselect.html
+++ b/public/ce/infoselect.html
@@ -1,5 +1,7 @@
 <template>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 	<style>
 		.info-section {
 			display: flex;
@@ -104,7 +106,7 @@
 
 			switch(name) {
 				case 'selectedindex':
-					eventDispatcher(el, 'newIndex', details);
+					eventDispatcher(el, 'newSelect', details);
 				case 'section':
 					eventDispatcher(el, 'newSection', details);
 			}
@@ -116,7 +118,7 @@
 			el.dataset.section = this.section;
 			console.log('after dataset');
 			console.log(el);
-			eventPublisher('newIndex');
+			eventPublisher('newSelect');
 			eventPublisher('newSection');
 		}
 	}
