--- a/public/ce/sectioncontainer.html
+++ b/public/ce/sectioncontainer.html
@@ -1,12 +1,14 @@
 <template>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 	<style>
 		.info-section {
 			display: flex;
 				justify-content: center;
 				flex-direction: column;
 			text-align: center;
-			width: 200px;
+			width: 300px;
 			min-height: 30px;
 			height: auto;
 			padding: 10px;
