--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <script>
     var events = (function () {
         var topics = {};
@@ -88,6 +89,9 @@
         }));
 
     }
+
+
+
 </script>
   
   <link rel="import" href="ce/infoinput.html">
@@ -109,7 +113,7 @@
         <h1 slot="text">Heat section</h1>
     </info-headline>
 
-    <toggle-button slot="b1" toggle="on" section="heat">TOGGLE HEAT SECTION VISIBILITY</toggle-button>
+    <toggle-button slot="b1" toggle="on" effect="display" section="heat">TOGGLE HEAT SECTION VISIBILITY</toggle-button>
 
     <info-headline slot="h2">
         <h1 slot="text">Edit heat section headline</h1>
@@ -145,7 +149,7 @@
         <h1 slot="text">Water section</h1>
     </info-headline>
 
-    <toggle-button slot="b1" toggle="on" section="water">TOGGLE WATER SECTION VISIBILITY</toggle-button>
+    <toggle-button slot="b1" toggle="on" effect="visibility" section="water">TOGGLE WATER SECTION VISIBILITY</toggle-button>
 
     <info-headline slot="h2">
         <h1 slot="text">Edit water section headline</h1>
